MillBuild/Testing/GeneratedByStaticTests/generated/components/generated.output
Rules useless in parser due to conflicts

    4 B: a


State 1 conflicts: 1 reduce/reduce


Grammar

    0 $accept: S $end

    1 S: A
    2      | B

    3 A: a

    4 B: a


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    a (258) 3 4


Nonterminals, with rules where they appear

    $accept (4)
        on left: 0
    S (5)
        on left: 1 2
        on right: 0
    A (6)
        on left: 3
        on right: 1
    B (7)
        on left: 4
        on right: 2


State 0

    0 $accept: • S $end

    a  shift, and go to state 1

    S  go to state 2
    A  go to state 3
    B  go to state 4


State 1

    3 A: a •
    4 B: a •

    $end      reduce using rule 3 (A)
    $end      [reduce using rule 4 (B)]
    $default  reduce using rule 3 (A)

    reduce/reduce conflict on token $end:
        3 A: a •
        4 B: a •
      Example: a •
      First reduce derivation
        S
        ↳ 1: A
             ↳ 3: a •
      Second reduce derivation
        S
        ↳ 2: B
             ↳ 4: a •



State 2

    0 $accept: S • $end

    $end  shift, and go to state 5


State 3

    1 S: A •

    $default  reduce using rule 1 (S)


State 4

    2 S: B •

    $default  reduce using rule 2 (S)


State 5

    0 $accept: S $end •

    $default  accept
